--- a/tutorial_TeX/RB_CTMC_Tutorial/RB_CTMC_Tutorial.tex
+++ b/tutorial_TeX/RB_CTMC_Tutorial/RB_CTMC_Tutorial.tex
@@ -12,9 +12,8 @@
 
 \textbf{\LARGE Phylogenetic Inference using \RevBayes}\\\vspace{2mm}
 \textbf{\it{\Large Substitution Models}}\\\vspace{2mm}
-{\it{\Large for Time-Constrained Trees}}\\\vspace{2mm}
 \vspace{1cm}
-{\Large Sebastian H{\"o}hna, Michael Landis, Tracy Heath and Brian Moore}
+{\Large Sebastian H{\"o}hna, Michael Landis, Brian Moore and Tracy Heath}
 \vspace{1cm}
 \end{center}
 
