--- a/tutorial_TeX/RB_CTMC_Tutorial/RB_CTMC_Tutorial_content.tex
+++ b/tutorial_TeX/RB_CTMC_Tutorial/RB_CTMC_Tutorial_content.tex
@@ -1,7 +1,9 @@
 \section{Overview}
 
+This tutorial provides the first protocol from our recent publication \citep{Hoehna2017a}.
+The second protocol is described in the \href{https://github.com/revbayes/revbayes_tutorial/raw/master/tutorial_TeX/RB_Partition_Tutorial/RB_Partition_Tutorial.pdf}{Partitioned data analysis tutorial} and the third protocol is described in the \href{https://github.com/revbayes/revbayes_tutorial/raw/master/tutorial_TeX/RB_BayesFactor_Tutorial/RB_BayesFactor_Tutorial.pdf}{Bayes factor tutorial}.
 
-This tutorial demonstrates how to set up and perform analyses using common nucleotide substitution models. 
+The present tutorial demonstrates how to set up and perform analyses using common nucleotide substitution models. 
 The substitution models used in molecular evolution are continuous time Markov models, which are fully characterized by their instantaneous-rate matrix:
 \begin{equation*}
 Q = \begin{pmatrix} -\mu_A & \mu_{GA} & \mu_{CA} & \mu_{TA} \\
@@ -24,24 +26,27 @@ Each specific substitution model has a uniquely defined instantaneous-rate matri
 
 In this tutorial you will perform phylogeny inference under common models of DNA sequence evolution: JC, F81, HKY85, GTR, GTR+Gamma and GTR+Gamma+I.
 For all of these substitution models, you will perform an MCMC analysis to estimate phylogeny and other model parameters.
-For the sake of simplicity we will assume a simple birth-death tree prior and a known, fixed clock rate.
+The estimated trees will be unrooted trees with independent branch-length parameters. 
+We will provide comments how to modify the tutorial if you wish to estimate rooted, clock-like trees.
 All the assumptions will be covered more in detail later in this tutorial.
 
 \subsection{Requirements}
 We assume that you have read and hopefully completed the following tutorials:
 \begin{itemize}
-\item RB\_Getting\_Started
-\item RB\_Basics\_Tutorial
+\item \href{https://github.com/revbayes/revbayes_tutorial/raw/master/tutorial_TeX/RB_Getting_Started/RB_Getting_Started.pdf}{Getting started}
+\item \href{https://github.com/revbayes/revbayes_tutorial/raw/master/tutorial_TeX/RB_Basics_Tutorial/RB_Basics_Tutorial.pdf}{\Rev basics}
 \end{itemize}
-Note that the RB\_Basics\_Tutorial introduces the basic syntax of \Rev but does not cover any phylogenetic models.
-You may skip the RB\_Basics\_Tutorial if you have some familiarity with \R.
-We tried to keep this tutorial very basic and introduce all the language concepts on the way.
-You may only need the RB\_Basics\_Tutorial for a more in-depth discussion of concepts in \Rev.
+Note that the \href{https://github.com/revbayes/revbayes_tutorial/raw/master/tutorial_TeX/RB_Basics_Tutorial/RB_Basics_Tutorial.pdf}{\Rev basics tutorial} introduces the basic syntax of \Rev but does not cover any phylogenetic models.
+You may skip the \href{https://github.com/revbayes/revbayes_tutorial/raw/master/tutorial_TeX/RB_Basics_Tutorial/RB_Basics_Tutorial.pdf}{\Rev basics tutorial} if you have some familiarity with \R.
+We tried to keep this tutorial very basic and introduce all the language concepts and theory on the way.
+You may only need the \href{https://github.com/revbayes/revbayes_tutorial/raw/master/tutorial_TeX/RB_Basics_Tutorial/RB_Basics_Tutorial.pdf}{\Rev basics tutorial} for a more in-depth discussion of concepts in \Rev.
 
 
-%%%%%%%%
+
+
+%%%%%%%%%%%%%%
 %%   Data   %%
-%%%%%%%%
+%%%%%%%%%%%%%%
 \section{Data and files}
 
 We provide the data file(s) which we will use in this tutorial.
@@ -49,7 +54,7 @@ You may want to use your own data instead.
 In the \cl{data} folder, you will find the following files
 \begin{itemize}
 \item
-\cl{primates\_cytb.nex}: Alignment of the \textit{cytochrome b} subunit from 23 primates representing 14 of the 16 families (\textit{Indriidae} and \textit{Callitrichidae} are missing).
+\cl{primates\_cytb.nex}: Alignment of the \textit{cytochrome b} subunit from 23 primates representing 14 of the 16 families (\textit{Indriidae} and \textit{Callitrichidae} are missing). Note that there is one outgroup species included: \emph{Galeopterus variegatus}.
 \end{itemize}
 
 
@@ -100,7 +105,7 @@ You will be able to complete the exercises without understanding the underlying 
 \noindent \\ \impmark The files for this example analysis are provided for you, which can easily be run using the \cl{source()} function in the \RevBayes console:
 {\tt \begin{snugshade*}
 \begin{lstlisting}
-source("RevBayes_scripts/JukesCantor.Rev")
+source("RevBayes_scripts/mcmc_JC.Rev")
 \end{lstlisting}
 \end{snugshade*}}
 
@@ -110,7 +115,7 @@ If you continue to let this run, then you will see it output the states of the M
 Ultimately, this is how you will execute most analyses in \RevBayes, with the full specification of the model and analyses contained in the sourced files. 
 You could easily run this entire analysis on your own data by substituting your data file name for that in the model-specification file. 
 However, it is important to understand the components of the model to be able to take full advantage of the flexibility and richness of \RevBayes.
-Furthermore, without inspecting the \Rev scripts sourced in \cl{JukesCantor.Rev}, you may end up inadvertently performing inappropriate analyses on your dataset, which would be a waste of your time and CPU cycles. 
+Furthermore, without inspecting the \Rev scripts sourced in \cl{mcmc\_JC.Rev}, you may end up inadvertently performing inappropriate analyses on your dataset, which would be a waste of your time and CPU cycles. 
 The next steps will walk you through the full specification of the model and MCMC analyses. 
 
 \bigskip
@@ -149,7 +154,8 @@ We will need that taxon information for setting up different parts of our model.
 {\tt \begin{snugshade*}
 \begin{lstlisting}
 n_species <- data.ntaxa()
-taxa <- data.taxa()	
+n_branches <- 2 * n_species - 3
+taxa <- data.taxa()
 \end{lstlisting}
 \end{snugshade*}}
 
@@ -193,66 +199,87 @@ Q
 As you can see, all substitution rates are equal.
 
 
-\subsection{Tree Prior: Tree Topology and Node Ages}
+\bigskip
+\subsection{Tree Topology and Branch Lengths}
 
-The tree ( the topology and node ages) is a stochastic node in our phylogenetic model. 
-In Figure \ref{fig:jc}, the tree is denoted $\Psi$.
+The tree topology and branch lengths are stochastic nodes in our phylogenetic model. 
+In Figure \ref{fig:jc}, the tree topology is denoted $\Psi$ and the length of the branch leading to node $i$ is $\nu_i$.
 
-We will assume a constant-rate birth-death process as the prior distribution on the tree.
-This means that all possible labeled, rooted tree topologies have equal probability. 
-The distribution in \RevBayes is \cl{dnBDP()}. 
-For the birth-death process we need a speciation rate and extinction rate parameter as well as a root age parameter.
-
-We begin with the root age parameter.
-From other empirical studies we know that crown age of primates is about 90 Mya \citep{Perelman2011}.
-Thus, for the sake of simplicity in this tutorial we fix it to 90 Mya.
+We will assume that all possible labeled, unrooted tree topologies have equal probability. This is the \cl{dnUniformTopology()} distribution in \RevBayes. Specify the \cl{topology} stochastic node by passing in the tip labels \cl{names} to the \cl{dnUniformTopology()} distribution:
 {\tt \begin{snugshade*}
 \begin{lstlisting}
-root_time <- 90
-\end{lstlisting}
-\end{snugshade*}}
-Next, we specify the two rate variables.
-We use a \textit{lognormal} distribution for both the \cl{diversification} and \cl{turnover} variables.
-We fix the mean of both prior distributions on the expected diversification rate and allow for one and two orders of magnitude prior uncertainty, repsectively.
-{\tt \begin{snugshade*}
-\begin{lstlisting}
-diversification_mean <- ln( ln(450.0/2.0) / root_time )
-diversification_sd <- 0.587405
-diversification ~ dnLognormal(mean=diversification_mean,sd=diversification_sd) 
-turnover_mean <- ln( ln(450.0/2.0) / root_time )
-turnover_sd <- 0.587405*2
-turnover ~ dnLognormal(mean=turnover_mean,sd=turnover_sd) 
-\end{lstlisting}
-\end{snugshade*}}
-Now we can transform the \cl{diversification} and \cl{turnover} into the \cl{speciation} rate and \cl{extinction} rate.
-{\tt \begin{snugshade*}
-\begin{lstlisting}
-birth_rate := diversification + turnover
-death_rate := turnover
-\end{lstlisting}
-\end{snugshade*}}
-Additionally, we know that we do not have all primate species included in this data set.
-We only have 23 out of the approximately 450 primate species.
-Thus, we use a sampling fraction to represent this incomplete taxon sampling \citep{Hoehna2011,Hoehna2014a}.
-{\tt \begin{snugshade*}
-\begin{lstlisting}
-rho <- n_species/450
-\end{lstlisting}
-\end{snugshade*}}
-Here we have created our first two stochastic variables.
-For each one of them we need to create at least one moves that change the stochastic variables.
-In this case we use scaling proposals because these are rate parameters and defined only on positive real numbers.
-{\tt \begin{snugshade*}
-\begin{lstlisting} 
-moves[++mvi] = mvScale(diversification,lambda=1.0,tune=true,weight=3.0)
-moves[++mvi] = mvScale(turnover,lambda=1.0,tune=true,weight=3.0)
+topology ~ dnUniformTopology(names)
 \end{lstlisting}
 \end{snugshade*}}
 
-Next, specify the \cl{tree} stochastic node by passing in the taxon information \cl{taxa} to the \cl{dnBDP()} distribution:
+Some types of stochastic nodes can be updated by a number of alternative moves. 
+Different moves may explore parameter space in different ways, and it is possible to use multiple different moves for a given parameter to improve mixing (the efficiency of the MCMC simulation). 
+In the case of our unrooted tree topology, for example, we can use both a nearest-neighbor interchange move (\cl{mvNNI}) and a subtree-prune and regrafting move (\cl{mvSPR}). 
+These moves do not have tuning parameters associated with them, thus you only need to pass in the \cl{topology} node and proposal \cl{weight}. 
 {\tt \begin{snugshade*}
 \begin{lstlisting}
-psi ~ dnBDP(lambda=birth_rate, mu=death_rate, rho=rho, rootAge=root_time, samplingStrategy="uniform", condition="survival", taxa=taxa)
+moves[++mi] = mvNNI(topology, weight=1.0)
+moves[++mi] = mvSPR(topology, weight=1.0)
+\end{lstlisting}
+\end{snugshade*}}
+The weight specifies how often the move will be applied either on average per iteration or relative to all other moves.
+Have a look at the \href{https://github.com/revbayes/revbayes_tutorial/raw/master/tutorial_TeX/RB_MCMC_Tutorial/RB_MCMC_Tutorial.pdf}{MCMC Diagnosis tutorial} for more details about moves and MCMC strategies (found on the \href{http://revbayes.github.io/tutorials.html}{\RevBayes~Tutorials Website}).
+
+
+Next we have to create a stochastic node for each of the $2N-3$ branches in our tree (where $N=$ \cl{n\_species}). 
+We can do this using a \cl{for} loop --- this is a plate in our graphical model. In this loop, we can create each of the branch-length nodes and assign each move. 
+Copy this entire block of \Rev~code into the console:
+{\tt \small \begin{snugshade*}
+\begin{lstlisting}
+for (i in 1:n_branches) {
+   br_lens[i] ~ dnExponential(10.0)
+   moves[++mi] = mvScale(br_lens[i]) 
+}
+\end{lstlisting}
+\end{snugshade*}}
+
+It is convenient for monitoring purposes to add the tree length as deterministic variable. The tree length is simply the sum of all branch lengths. This parameter is denoted $\mathbb{L}$ in Figure \ref{fig:jc}.
+Accordingly, the tree length can be computed using the \cl{sum()} function, which calculates the sum of any vector of values.
+{\tt \begin{snugshade*}
+\begin{lstlisting}
+TL := sum(br_lens)
+\end{lstlisting}
+\end{snugshade*}}
+
+Finally, we can create a \emph{phylogram} (a phylogeny in which the branch lengths are proportional to the expected number of substitutions/site) by combining the tree topology and branch lengths.
+We do this using the \cl{treeAssembly()} function, which applies the value of the $i^{th}$ member of the \cl{br\_lens} vector to the branch leading to the $i^{th}$ node in \cl{topology}. 
+Thus, the \cl{phylogeny} variable is a deterministic node: 
+
+{\tt \begin{snugshade*}
+\begin{lstlisting}
+phylogeny := treeAssembly(topology, br_lens)
+\end{lstlisting}
+\end{snugshade*}}
+
+\begin{framed}
+\textbf{Prior on Time-Trees: Tree Topology and Node Ages}\\
+
+Alternatively, you may want to specify a prior on time-trees.
+Here we will briefly indicate how to specify such an prior which will lead to inference of time trees.
+
+The tree (the topology and node ages) is a stochastic node in our phylogenetic model. 
+For simplicity, we will assume a uniform prior on both topologies and node ages.
+The distribution in \RevBayes is \cl{dnUniformTimeTree()}. 
+
+\impmark{Fore more information on tree priors, such as birth-death processes, please read the \href{https://github.com/revbayes/revbayes_tutorial/raw/master/tutorial_TeX/RB_DiversificationRate_Tutorial/RB_DiversificationRate_Tutorial.pdf}{RB\_DiversificationRate\_Tutorial}.}
+
+First, we need to specify the age of the tree:
+{\tt \begin{snugshade*}
+\begin{lstlisting}
+root_age <- 10.0
+\end{lstlisting}
+\end{snugshade*}}
+Here we simply assumed that the tree is 10.0 time units old. 
+We could also specify a prior on the root age if we have fossil calibrations (see \href{https://github.com/revbayes/revbayes_tutorial/raw/master/tutorial_TeX/RB_DivergenceTime_Calibration_Tutorial/RB_DivergenceTime_Calibration_Tutorial.pdf}{Divergence Time and Calibration Tutorial})
+Next, we specify the \cl{tree} stochastic variable by passing in the taxon information \cl{taxa} to the \cl{dnUniformTimeTree()} distribution:
+{\tt \begin{snugshade*}
+\begin{lstlisting}
+psi ~ dnUniformTimeTree(rootAge=root_age, taxa=taxa)
 \end{lstlisting}
 \end{snugshade*}}
 
@@ -274,13 +301,11 @@ moves[++mvi] = mvNodeTimeSlideUniform(psi, weight=15.0)
 The weight specifies how often the move will be applied either on average per iteration or relative to all other moves.
 Have a look at the MCMC tutorial for more details about moves and MCMC strategies: \href{http://revbayes.github.io/tutorials.html}{http://revbayes.github.io/tutorials.html}
 
+\textbf{Molecular clock}\\
 
-\impmark{Fore more information on tree priors please read the \href{https://github.com/revbayes/revbayes_tutorial/raw/master/tutorial_TeX/RB_DiversificationRate_Tutorial/RB_DiversificationRate_Tutorial.pdf}{RB\_DiversificationRate\_Tutorial}.}
-
-\subsection{Molecular clock}
-
-We know from empirical estimates that the molecular clock rate is about  0.01 (=1\%) per million years per site
-Nevertheless, we will estimate it here because we fixed the root age.
+Additionally, in the case of time-calibrated trees, we need to add a molecular clock rate parameter.
+For example, we know from empirical estimates that the molecular clock rate is about  0.01 (=1\%) per million years per site
+Nevertheless, we can estimate it here because we fixed the root age.
 We use a uniform prior on the log-transform clock rate.
 This specifies our lack of prior knowledge on the magnitude of the clock rate.
 {\tt \begin{snugshade*}
@@ -294,6 +319,8 @@ clock_rate := 10^log_clock_rate
 Instead, you could also fix the clock rate and estimate the root age
 \impmark{Fore more information on molecular clocks please read the \href{https://github.com/revbayes/revbayes_tutorial/raw/master/tutorial_TeX/RB_DivergenceTime_Tutorial/RB_DivergenceTime_Tutorial.pdf}{RB\_DivergenceTime\_Tutorial}.}
 
+\end{framed}
+
 
 \subsection{Putting it All Together}
 
@@ -302,15 +329,14 @@ Collectively, these parameters comprise a distribution called the \textit{phylog
 This distribution requires several input arguments: 
 (1) the \cl{tree} with branch lengths; 
 (2) the instantaneous-rate matrix \cl{Q};
-(3) the clock rate, and; 
-(4) the \cl{type} of character data.
+(3) the \cl{type} of character data.
 
 
 Build the random variable for the character data (sequence alignment).
 {\tt \begin{snugshade*}
 \begin{lstlisting}
 # the sequence evolution model
-seq ~ dnPhyloCTMC(tree=psi, Q=Q, branchRates=clock_rate, type="DNA")
+seq ~ dnPhyloCTMC(tree=psi, Q=Q, type="DNA")
 \end{lstlisting}
 \end{snugshade*}}
 
@@ -370,19 +396,22 @@ monitors[++mni] = mnFile(filename="output/primates_cytb_JC_posterior.trees",prin
 Finally, create a screen monitor that will report the states of specified variables to the screen with \cl{mnScreen}:
 {\tt \begin{snugshade*}
 \begin{lstlisting}
-monitors[++mni] = mnScreen(printgen=1000, clock_rate, diversification, turnover)
+monitors[++mni] = mnScreen(printgen=1000, TL)
 \end{lstlisting}
 \end{snugshade*}}
+This monitor mostly helps us to see the progress of the MCMC run.
 
 \subsubsection{Initializing and Running the MCMC Simulation}
 
-With a fully specified model, a set of monitors, and a set of moves, we can now set up the MCMC algorithm that will sample parameter values in proportion to their posterior probability. The \cl{mcmc()} function will create our MCMC object:
+With a fully specified model, a set of monitors, and a set of moves, we can now set up the MCMC algorithm that will sample parameter values in proportion to their posterior probability. 
+The \cl{mcmc()} function will create our MCMC object:
 {\tt \begin{snugshade*}
 \begin{lstlisting}
-mymcmc = mcmc(mymodel, monitors, moves)
+mymcmc = mcmc(mymodel, monitors, moves, nruns=2)
 \end{lstlisting}
 \end{snugshade*}}
-
+Notice that we also specified \cl{nruns=2} which means that \RevBayes will automatically run 2 independent MCMC runs.
+You will find that the output is created in two files with extension \cl{\_run\_1} and \cl{\_run\_2} for each replicate and additionally the samples from both runs are combined into one file for more convenient post-processing.
 
 We may wish to run the \cl{.burnin()} member function.
 Recall that this function \textbf{does not} specify the number of states that we wish to discard from the MCMC analysis as burnin (i.e., the samples collected before the chain converges to the stationary distribution).  
@@ -407,7 +436,7 @@ When the analysis is complete, you will have the monitored files in your output 
 Methods for visualizing the marginal densities of parameter values are not currently available in \RevBayes itself. 
 Thus, it is important to use programs like \Tracer \citep{Rambaut2011} to evaluate mixing and non-convergence.
 
-\noindent \\ \impmark Look at the file called \cl{output/primates\_cytb\_JC\_posterior.log} in \texttt{Tracer}. There you see the posterior distributions of the continuous parameters, \EG, the clock rate and diversification rates.
+\noindent \\ \impmark Look at the files called \cl{output/primates\_cytb\_JC\_posterior\_run\_1.log} and \cl{output/primates\_cytb\_JC\_posterior\_run\_2.log} in \Tracer. There you see the posterior distributions of the continuous parameters, \EG, the tree length variable \cl{TL}.
 
 
 \subsection{Exercise 1}
@@ -417,14 +446,14 @@ We are interested in the phylogenetic relationship of the Tarsiers. Therefore, w
 {\tt \begin{snugshade*}
 \begin{lstlisting}
 treetrace = readTreeTrace("output/primates_cytb_JC_posterior.trees",
-                             treetype="clock")
+                             treetype="non-clock")
 treetrace.summarize()
 \end{lstlisting}
 \end{snugshade*}}
 The \cl{mapTree()} function will summarize the tree samples and write the maximum \textit{a posteriori} tree to file:
 {\tt \begin{snugshade*}
 \begin{lstlisting}
-mapTree(treetrace,"output/primates_cytb_JC.tree")
+map_tree = mapTree(treetrace,"output/primates_cytb_JC_MAP.tree")
 \end{lstlisting}
 \end{snugshade*}}
 \begin{figure}[htbp!]
@@ -479,7 +508,7 @@ GTR+$\Gamma$+I & \TextField[name=pp61,backgroundcolor={.85 .85 .85},color={1 0 0
 \hline
 \textbf{Species} & \textbf{Family} & \textbf{Parvorder} & \textbf{Suborder} \\ 
 \hline
-Alouatta palliata & Atelidae & Platyrrhini (NWM) & Haplorrhini \\
+%Alouatta palliata & Atelidae & Platyrrhini (NWM) & Haplorrhini \\
 Aotus trivirgatus & Aotidae & Platyrrhini (NWM) & Haplorrhini \\
 Callicebus donacophilus & Pitheciidae & Platyrrhini (NWM) & Haplorrhini \\
 Cebus albifrons & Cebidae & Platyrrhini (NWM) & Haplorrhini \\
@@ -527,7 +556,7 @@ Q_{HKY} = \begin{pmatrix}
 \end{equation*}
 [The diagonal ${\cdot}$ entries are equal to the negative sum of the elements in the corresponding row.] 
 
-\noindent \\ \impmark Use the file \cl{JukesCantor.Rev} as a starting point for the HKY analysis.
+\noindent \\ \impmark Use the file \cl{mcmc\_JC.Rev} as a starting point for the HKY analysis.
 
 Note that we are adding two new variables to our model.
 We can define a variable \cl{pi} for the stationary frequencies that are drawn from a flat Dirichlet distribution by
@@ -574,7 +603,7 @@ This should be all for the HKY model.
 \subsection{Exercise 2}
 
 \begin{itemize}
-\item Copy the file called  \cl{JukesCantor.Rev} and modify it by including the necessary parameters to specify the HKY substitution model.
+\item Copy the file called  \cl{mcmc\_JC.Rev} and modify it by including the necessary parameters to specify the HKY substitution model.
 \item Run an MCMC analysis to estimate the posterior distribution under the HKY substitution model.
 \item Are the resulting estimates of the base frequencies equal? 
 	If not, how much do they differ? 
@@ -700,7 +729,7 @@ Q := fnGTR(er,pi)
 \subsection{Execise 3}
 
 \begin{itemize}
-\item Use one of your previous analysis files---either the \cl{JukesCantor.Rev} or \cl{HKY.Rev}---to specify a GTR analysis in a new file called \cl{GTR.Rev}.
+\item Use one of your previous analysis files---either the \cl{mcmc\_JC.Rev} or \cl{HKY.Rev}---to specify a GTR analysis in a new file called \cl{mcmc\_GTR.Rev}.
 	Adapt the old analysis to be performed under the GTR substitution model. 
 \item Run an MCMC analysis to estimate the posterior distribution.
 \item Complete the table of the phylogenetic relationship of primates.
