--- a/tutorial_TeX/RB_CTMC_Tutorial/figures/jc_graphical_model.tex
+++ b/tutorial_TeX/RB_CTMC_Tutorial/figures/jc_graphical_model.tex
@@ -1,64 +1,40 @@
 \definecolor{shc}{RGB}{183,207,237}
 \begin{tikzpicture}
-\node[obnode] (x) at (-0,1) {\LARGE $S$};
+\node[obnode] (x) at (-5,1) {$seq$};
 \node (x_dist) at ($(x)+(0.8,-0.7)$) {PhyloCTMC};
 \draw (x) -- (x_dist) ;
 \node[constnode] (Q) at ($(x)+(2,2)$) {\Large $Q$};
-\node[detnode] (rate) at ($(x)+(-2,0)$) {\small $clock$};
-\node[snode] (log_rate) at ($(rate)+(-2,0)$) {\tiny $log\_clock$};
-\node[constnode] (c) at ($(log_rate)+(-2.25,0.5)$) {\large $-6$};
-\node[constnode] (d) at ($(log_rate)+(-2.25,-0.5)$) {\large $1$};
-\draw [dtaro] (log_rate) -- (rate);
-\draw [taro] (c) -- (log_rate);
-\draw [taro] (d) -- (log_rate);
-\node (clock_dist) at ($(log_rate)+(-1.0,-1.0)$) {Uniform};
-\draw (log_rate) -- (clock_dist) ;
-\node[snode] (psi) at ($(x)+(-2,2)$) {\Large $\Psi$};
-\node (psi_dist) at ($(psi)+(-0.8,-0.7)$) {BirthDeath};
-\draw (psi) -- (psi_dist) ;
-\node[detnode] (lambda) at ($(psi)+(-0.5,1.5)$) {\LARGE $\lambda$};
-\node[detnode] (mu) at ($(psi)+(1,1.5)$) {\LARGE $\mu$};
-\node[snode] (div) at ($(lambda)+(-0.5,1.5)$) {\LARGE $d$};
-\node[snode] (turn) at ($(mu)+(0.5,1.5)$) {\LARGE $r$}; 
-\node (div_dist) at ($(div)+(1.2,0.7)$) {Lognormal};
-\draw (turn) -- (div_dist) ;
-\draw (div) -- (div_dist) ;
-\node[constnode] (md) at ($(div)+(-0.6,2)$) {\Large $m_d$};
-\node[constnode] (sdd) at ($(div)+(0.6,2)$) {\Large $sd_d$};
-\node[constnode] (mt) at ($(turn)+(-0.6,2)$) {\Large $m_r$};
-\node[constnode] (sdt) at ($(turn)+(0.6,2)$) {\Large $sd_r$};
-\node[constnode] (root) at ($(psi)+(-1.5,0.5)$) {$90$};
-\draw [taro] (lambda) -- (psi);
-\draw [taro] (mu) -- (psi);
-\draw [taro] (md) -- (div);
-\draw [taro] (sdd) -- (div);
-\draw [taro] (mt) -- (turn);
-\draw [taro] (sdt) -- (turn);
-\draw [dtaro] (div) -- (lambda);
-\draw [dtaro] (turn) -- (lambda);
-\draw [dtaro] (turn) -- (mu);
-\draw [taro] (Q) -- (x) ;
-\draw [taro] (psi) -- (x) ;
-\draw [taro] (rate) -- (x) ;
-\draw [taro] (root) -- (psi) ;
+\node (Q_dist) at ($(Q)+(0.8,-0.7)$) {JC};
+\draw (Q) -- (Q_dist) ;
+\node[detnode] (psi) at ($(x)+(-2,2)$) {\Large $\Psi$};
+\node (psi_dist) at ($(psi)+(-0.8,-0.7)$) {Tree};
+\draw (psi) -- (psi_dist);
+\node[snode] (bl) at ($(psi)+(-1.0,2.0)$) {\Large $bl_i$};
+\node[snode] (tau) at ($(psi)+(1,2.0)$) {\LARGE $\tau$};
+\node (bl_dist) at ($(bl)+(-1.2,0.7)$) {Exponential};
+\node (tau_dist) at ($(tau)+(1.0,0.7)$) {Uniform};
+\draw (bl) -- (bl_dist);
+\draw (tau) -- (tau_dist);
+\node[constnode] (rate_bl) at ($(bl)+(0,1.5)$) {\Large $10$};
+\node[constnode] (N) at ($(tau)+(0,1.5)$) {\Large $N$};
+\node[rectangle,dashed, thick, inner sep=4mm, draw=black!100, fit = (rate_bl) (bl)] (bl_plate) {};
+\node[anchor=south west,inner sep=3pt] at (bl_plate.south west) {\small $i \in 2N-3$};
+\draw [taro] (rate_bl) -- (bl);
+\draw [taro] (N) -- (tau);
+\draw [dtaro] (tau) -- (psi);
+\draw [dtaro] (bl) -- (psi);
+\draw [taro] (Q) -- (x);
+\draw [taro] (psi) -- (x);
 \node (a1) at (4,0.25) { };
-\node (a2) at (4,8.5) { };
-\node (a3) at (13.5,2.75) { };
+\node (a2) at (4,7.0) { };
+\node (a3) at (13.0,2.75) { };
 \node[rectangle, very thick, inner sep=6mm, fill=shc, fit = (a1) (a2) (a3)] (console) {};
-\node (l1) at (4,7.75) [right]{\tt m\_d <- ln( ln(450/2) / 90 )};
-\node (l1) at (4,7.4) [right]{\tt sd\_d <- 0.587405*2};
-\node (l1) at (4,7.05) [right]{\tt d $\sim$ dnLognorma(m\_d,sd\_d)};
-\node (l1) at (4,6.7) [right]{\tt m\_r <- ln( ln(450/2) / 90 )};
-\node (l1) at (4,6.35) [right]{\tt sd\_r <- 0.587405*2};
-\node (l1) at (4,6.0) [right]{\tt r $\sim$ dnLognorma(m\_r,sd\_r)};
-\node (l1) at (4,5.65) [right]{\tt lambda := d + r};
-\node (l1) at (4,5.3) [right]{\tt mu := r};
-\node (l1) at (4,4.95) [right]{\tt root <- 90.0};
-\node (l2) at (4,4.6) [right]{\tt psi $\sim$ dnBirthDeath( lambda, mu, root, taxa)};
-\node (l8) at (4,3.6) [right]{\tt Q\_mol <- fnJC(4) };
-\node (l1) at (4,2.55) [right]{\tt log\_clock $\sim$ dnUniform(-6,1)};
-\node (l1) at (4,2.2) [right]{\tt clock := 10\textasciicircum log\_clock};
-\node (l9) at (4,1.3) [right]{\tt seq $\sim$ dnPhyloCTMC( tree=psi, Q=Q\_mol, };
-\node (l9) at (7.6,0.95) [right]{\tt branchRates=0.01, type="DNA" ) };
-\node (l10) at (4,0.6) [right]{\tt seq.clamp( data ) };
+\node (l1) at (4,5.95) [right]{\tt for (i in 1:n\_branches) \{};
+\node (l1) at (5.5,5.6) [right]{\tt bl[i] $\sim$ dnExponential(10.0)};
+\node (l1) at (4,5.25) [right]{\tt \}};
+\node (l1) at (4,4.9) [right]{\tt topology $\sim$ dnUniformTopology(taxa)};
+\node (l2) at (4,4.55) [right]{\tt psi := treeAssembly(topology, bl)};
+\node (l8) at (4,3.5) [right]{\tt Q := fnJC(4) };
+\node (l9) at (4,2.6) [right]{\tt seq $\sim$ dnPhyloCTMC( tree=psi, Q=Q, type="DNA" ) };
+\node (l10) at (4,1.9) [right]{\tt seq.clamp( data ) };
 \end{tikzpicture}
