--- a/tutorial_TeX/refs.bib
+++ b/tutorial_TeX/refs.bib
@@ -3187,6 +3187,16 @@ Gives also a introduction what else can be used and what is good and bad in ML, 
   Timestamp                = {2014.03.11}
 }
 
+@Article{Hoehna2017a,
+  Title                    = {{Phylogenetic Inference using RevBayes}},
+  Author                   = {Sebastian H{\"o}hna and Michael J. Landis and Tracy A Heath},
+  Journal                  = {Current Protocols in Bioinformatics},
+  Year                     = {2017},
+
+  Owner                    = {hoehna},
+  Timestamp                = {2016.12.31}
+}
+
 @Article{Hoehna2011,
   Title                    = {{Inferring speciation and extinction rates under different species sampling schemes}},
   Author                   = {H{\"o}hna, Sebastian and Stadler, Tanja and Ronquist, Fredrik and Britton, Tom},
