Edits to modular model GM TEFBD

--- a/tutorial_TeX/RB_TotalEvidenceDating_FBD_Tutorial/figures/tikz/full_model_modular.tex
+++ b/tutorial_TeX/RB_TotalEvidenceDating_FBD_Tutorial/figures/tikz/full_model_modular.tex
@@ -1,5 +1,5 @@
 \begin{tikzpicture}
-\node[obmod] (a) at (0,0) {\large DNA Data};
+\node[obmod] (a) at (0,0) {\large Molecular Data};
 \node[smod] (rm) at ($(a)+(-3.5,1.35)$) {\large Substitution Model};
 \node[smod] (sr) at ($(a)+(-3.5,0)$) {\large Site Rate Model};
 \node[smod] (br) at ($(a)+(-3.5,-1.35)$) {\large Branch Rate Model};
